--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -9,3 +9,4 @@ google-cloud-datastore==1.8.0
 google-cloud-firestore==1.2.0
 google-cloud-pubsub==0.41.0
 google-cloud-storage==1.16.0
+Pillow==6.0.0
